opam-version: "2.0"
maintainer: "thomas@gazagnaire.org"
authors: [
  "Thomas Gazagnaire"
  "Anil Madhavapeddy"
  "Gabriel Radanne"
  "Mindy Preston"
  "Thomas Leonard"
  "Nicolas Ojeda Bar"
  "Dave Scott"
  "David Kaloper"
  "Hannes Mehnert"
  "Richard Mortier"
]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/mirage-time"
doc: "https://mirage.github.io/mirage-time/"
bug-reports: "https://github.com/mirage/mirage-time/issues"
depends: [
  "ocaml" {>= "4.04.2"}
  "jbuilder" {build & >= "1.0+beta9"}
  "mirage-time-lwt" {>= "1.0.0"}
  "lwt"
  "duration"
]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/mirage/mirage-time.git"
